Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8137324

Warning from MacOSX for deprecated Carbon Component Manager module

XMLWordPrintable

    • x86
    • other

      FULL PRODUCT VERSION :
      java_8_51

      ADDITIONAL OS VERSION INFORMATION :
      MacOSX 10.11 GM

      A DESCRIPTION OF THE PROBLEM :
      I tested javafx Media and MediaPlayer under MacOSX 10.11 GM. it gives such warning as below:

      This application, or a library it uses, is using the deprecated Carbon Component Manager for hosting Audio Units. Support for this will be removed in a future release. Also, this makes the host incompatible with version 3 audio units. Please transition to the API's in AudioComponent.h.



      REGRESSION. Last worked in version 8u51


      REPRODUCIBILITY :
      This bug can be reproduced always.

            ddehaven David Dehaven (Inactive)
            webbuggrp Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: