8137324: Warning from MacOSX for deprecated Carbon Component Manager module

Updated CoreAudio Utility code from ADC

Reviewed-by: kcr, almatvee